[package]
name = "datasync"
version = "0.1.0"
authors = ["Rodrigo Leite <rodrigo@leite.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
git2 = "0.13.15"
log = "0.4.11"
serde = { version = "1.0.118", features = ["derive"] }
simple_logger = "1.11.0"
